Site html css 02

--- a/site/index.html
+++ b/site/index.html
@@ -27,78 +27,78 @@
 	    <section id="derniersInscrits">
 			<h1>Les derniers inscrits</h1>
             <article>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" />
+                <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" />
+                <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" />
+                <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" />
+                <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" />
+                <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
 		</section>
-        <section>
+        <section id="dernieresOffres">
             <h1>Les dernières offres</h1>
-            <div>
+            <div class="offresImpaires">
                 <dl>
-                    <dt>Société :</dt><dd>b-com</dd>
-                    <dt>Contrat :</dt><dd>non précisé</dd>
-                    <dt>Poste :</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
-            <div>
+            <div class="offresPaires">
                 <dl>
-                    <dt>Société :</dt><dd>Everlasting</dd>
-                    <dt>Contrat :</dt><dd>CDD - CDI</dd>
-                    <dt>Poste :</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
-            <div>
+            <div class="offresImpaires">
                 <dl>
-                    <dt>Société :</dt><dd>b-com</dd>
-                    <dt>Contrat :</dt><dd>non précisé</dd>
-                    <dt>Poste :</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
-            <div>
+            <div class="offresPaires">
                 <dl>
-                    <dt>Société :</dt><dd>Everlasting</dd>
-                    <dt>Contrat :</dt><dd>CDD - CDI</dd>
-                    <dt>Poste :</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd> Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
-            <div>
+            <div class="offresImpaires">
                 <dl>
-                    <dt>Société :</dt><dd>b-com</dd>
-                    <dt>Contrat :</dt><dd>non précisé</dd>
-                    <dt>Poste :</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
-            <div>
+            <div class="offresPaires">
                 <dl>
-                    <dt>Société :</dt><dd>Everlasting</dd>
-                    <dt>Contrat :</dt><dd>CDD - CDI</dd>
-                    <dt>Poste :</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;: </dt><dd> Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="">En savoir plus</a>
             </div>
         </section>
-        <section>
+        <section id="recherche">
             <h1>Recherche</h1>
             <form method="" action="#">
                 <label>Type de contrat</label>
@@ -113,10 +113,10 @@
                 <input type="text" />
                 <label>Mots-clés</label>
                 <input type="text" />
-                <input type="submit" value="OK" />
+                <input type="submit" value="OK" id="ok"/>
             </form>
         </section>
-        <section>
+        <section id="description">
             <h1>Description</h1>
             <article>
                 <h2>Qu'est ce que ce site ?</h2>
@@ -128,14 +128,14 @@
             </article>
         </section>
 		<footer>
-            <div>
+            <div class="contact">
                 <h1>Contact</h1>
                 <p>Newton Pham Dang</p>
                 <a href="">newton.phd@gmail.com</a>
             </div>
-            <div>
+            <div class="services">
                 <h1>Services</h1>
-                <a href="">Les offres d’emploi</a>
+                <a href="">Les offres d’emploi</a><br />
                 <a href="">Les CVs des candidats</a>
             </div>
         </footer>
