Site html css 03

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
             </div>           
         </header>
     	<nav class="principal">
+            <h1 class="hidden">Menu</h1>
     		<ul>
     			<li class="actif"><a href="./index.html">Accueil</a></li>
     			<li><a href="./offresEmplois.html">Offres</a></li>
@@ -27,22 +28,27 @@
 	    <section id="derniersInscrits">
 			<h1>Les derniers inscrits</h1>
             <article>
+                <h1 class="hidden">Candidat</h1>
                 <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
+                <h1 class="hidden">Candidat</h1>
                 <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
+                <h1 class="hidden">Candidat</h1>
                 <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
+                <h1 class="hidden">Candidat</h1>
                 <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
+                <h1 class="hidden">Candidat</h1>
                 <a href=""><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
