--- a/site/offresEmplois.html
+++ b/site/offresEmplois.html
@@ -61,7 +61,7 @@
     				<dt>Société&nbsp;: </dt><dd>b-com</dd><br />
     				<dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
     			</dl>
-    			<a href="">Voir les détails</a>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
     		<article class="offresDroites offresEtroites">
                 <h1 class="hidden">Article</h1>
@@ -70,7 +70,7 @@
     				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
     				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
     			</dl>
-    			<a href="">Voir les détails</a>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
     		<article class="offresGauches offresEtroites">
                 <h1 class="hidden">Article</h1>
@@ -79,16 +79,16 @@
     				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
     				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
     			</dl>
-    			<a href="">Voir les détails</a>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
-            <article class="offresDroites">
+            <article class="offresDroites offresLarges">
                 <h1 class="hidden">Article</h1>
                 <img src="./img/B-com.jpg" alt="Logo de l'entreprise ..." width="125" height="80" />
                 <dl>
                     <dt>Société&nbsp;: </dt><dd>b-com</dd><br />
                     <dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
-                <a href="">Voir les détails</a>
+                <p><a href="./offreEverlasting.html">Voir les détails</a></p>
             </article>
     		<article class="offresGauches">
                 <h1 class="hidden">Article</h1>
@@ -97,7 +97,7 @@
     				<dt>Société&nbsp;: </dt><dd>b-com</dd><br />
     				<dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
     			</dl>
-    			<a href="">Voir les détails</a>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
     		<article class="offresDroites offresEtroites">
                 <h1 class="hidden">Article</h1>
@@ -106,7 +106,7 @@
     				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
     				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
     			</dl>
-    			<a href="">Voir les détails</a>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
     	</section>
     	<footer>
