Site html css 04

--- a/site/galerieCandidats.html
+++ b/site/galerieCandidats.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
             <meta charset="utf-8">
-            <title>Titre du site - Les candidats</title>
+            <title>Media Spot - Les candidats</title>
             <meta name="description" content="...">
             <link type="text/css" rel="stylesheet" href="./css/main.css">
     </head>
     <body>
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
-            <h1>Titre du site</h1>
+            <h1>Media Spot</h1>
             <p class="slogan">Unify the difference</p>
             <div>
                 <a id="inscription" href="./inscription.html">S'inscrire</a>
@@ -54,6 +54,134 @@
     	</section>
         <section id="listeCandidats">
     	   <h1>Les candidats</h1>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
+           <article>
+                <h1 class="hidden">Candidat</h1>
+                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
+                <p>
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    <a href="./candidatNewton.html">Voir le profil</a>
+                </p>
+           </article>
         </section>
     	<footer>
             <div class="contact">
