--- a/site/offreEverlasting.html
+++ b/site/offreEverlasting.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
             <meta charset="utf-8">
-            <title>Titre du site - Everlasting</title>
+            <title>Media Spot - Everlasting</title>
             <meta name="description" content="...">
             <link type="text/css" rel="stylesheet" href="./css/main.css">
     </head>
     <body>
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
-            <h1>Titre du site</h1>
+            <h1>Media Spot</h1>
             <p class="slogan">Unify the difference</p>
             <div>
                 <a id="inscription" href="./inscription.html">S'inscrire</a>
@@ -40,7 +40,7 @@
               professionnels tant journalistes que réalisateurs, monteurs, infographistes, ou producteurs, et à son infrastructure entièrement intégrée, Everlasting a largement gagné son pari : se positionner comme véritable alternative dans le secteur de la production indépendante du paysage audiovisuel belge francophone.</p>
             </article>
             <article>
-                <h1>Profil</h1>
+                <h1>Profil recherché</h1>
                 <ol>
                     <li>Diplôme universitaire de journaliste</li>
                     <li>Expérience utile de 3 ans, de préférence en télévision</li> 
