--- a/site/offresEmplois.html
+++ b/site/offresEmplois.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
             <meta charset="utf-8">
-            <title>Titre du site - Les offres</title>
+            <title>Media Spot - Les offres</title>
             <meta name="description" content="...">
             <link type="text/css" rel="stylesheet" href="./css/main.css">
     </head>
     <body>
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
-            <h1>Titre du site</h1>
+            <h1>Media Spot</h1>
             <p class="slogan">Unify the difference</p>
             <div>
                 <a id="inscription" href="./inscription.html">S'inscrire</a>
